deploy/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pawmery-client-service
  labels:
    app: pawmery-client
    component: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: pawmery-client
  sessionAffinity: None
